--- a/Smart Join/Smart_Join.entitlements
+++ b/Smart Join/Smart_Join.entitlements
@@ -2,9 +2,35 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>com.apple.security.app-sandbox</key>
-	<true/>
-	<key>com.apple.security.files.user-selected.read-only</key>
-	<true/>
+    <key>com.apple.security.files.user-selected.read-write</key>
+    <true/>
+	<key>com.apple.security.keychain</key>
+    <true/>
+	<key>com.apple.security.network.client</key>
+    <true/>
+    <key>com.apple.security.network.server</key>
+    <true/>
+    <key>com.apple.security.temporary-exception.apple-events</key>
+    <array>
+        <string>com.roblox.RobloxPlayerInstaller</string>
+        <string>com.apple.systemevents</string>
+        <string>com.apple.finder</string>
+    </array>
+    <key>com.apple.security.automation.apple-events</key>
+    <true/>
+    <key>com.apple.security.files.downloads.read-write</key>
+    <true/>
+    <key>com.apple.security.temporary-exception.files.absolute-path.read-write</key>
+    <array>
+        <string>/Applications/</string>
+        <string>/private/var/folders/</string>
+        <string>/</string>
+    </array>
+    <key>com.apple.security.temporary-exception.files.home-relative-path.read-write</key>
+    <array>
+        <string>Library/</string>
+        <string>Library/Logs</string>
+        <string>Library/Logs/Roblox</string>
+    </array>
 </dict>
 </plist>
